Fix list spacing in JSON pages

--- a/src/desktop/apps/page/index.styl
+++ b/src/desktop/apps/page/index.styl
@@ -32,12 +32,18 @@
     line-height 1.5em
   ul
     list-style disc
+    margin-left 1em
     li
       margin-bottom 1em
+      margin-left 1em
+      line-height 1.5em
   ol
     list-style decimal
+    margin-left 1em
     li
       margin-bottom 1em
+      margin-left 1em
+      line-height 1.5em
 
 @media (max-width: 600px)
   #page-markdown-content
